Add in carrot cake image

--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -6,5 +6,13 @@
     </head>
     <body>
         <h1>Carrot Cake III Recipe</h1>
+
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2017%2F01%2F26%2F1053595-Carrot-Cake-III-7402-sarah-2000.jpg" width="450" 
+        alt="A delicious 2 layer carrot cake topped with cream cheese frosting and pecans">
+
+       <h2>Description</h2>
+
+       <p></p>
+
     </body>
 </html>
