Add unordered list items for cake

--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -12,7 +12,27 @@
 
        <h2>Description</h2>
 
-       <p></p>
+       <p>This is a fantastic carrot cake recipe that can be made as 
+           is, or you can add your own personal touch to it! This 
+           moist cake will have your family hoovering in the kitchen 
+           awaiting this delectable dessert. 
+       </p>
 
+       <h3>Ingredients</h3>
+
+       Cake:
+       <ul>
+            <li>4 eggs</li>
+            <li>1 1/4 cups vegetable oil</li>
+            <li>2 cups white sugar</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>2 cups all-purpose flour</li>
+            <li>2 teaspoons baking soda</li>
+            <li>2 teaspoons baking powder</li>
+            <li>1/2 teaspoon salt</li>
+            <li>2 teaspoons ground cinnamon</li>
+            <li>3 cups grated carrots</li>
+            <li>1 cup chopped pecans</li>
+       </ul>
     </body>
 </html>
