--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -34,5 +34,14 @@
             <li>3 cups grated carrots</li>
             <li>1 cup chopped pecans</li>
        </ul>
+       Frosting:
+       <ul>
+           <li>1/2 cup butter, softened</li>
+           <li>8 ounces cream cheese, softened</li>
+           <li>4 cups confectioners' sugar</li>
+           <li>1 teaspoon vanilla extract</li>
+           <li>1 cup chopped pecans</li>
+       </ul>
+       
     </body>
 </html>
