--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Carrot Cake III Recipe</title>
     </head>
     <body>
         <h1>Carrot Cake III Recipe</h1>
@@ -42,6 +42,14 @@
            <li>1 teaspoon vanilla extract</li>
            <li>1 cup chopped pecans</li>
        </ul>
-       
+
+       <h3>Steps</h3>
+
+       <ol>
+           <li>Preheat oven to 350 degrees F (175 degrees C). Grease and flour a 9x13 inch pan.</li>
+           <li>In a large bowl, beat together eggs, oil, white sugar and 2 teaspoons vanilla. Mix in flour, baking soda, baking powder, salt and cinnamon. Stir in carrots. Fold in pecans. Pour into prepared pan.</li>
+           <li>Bake in the preheated oven for 40 to 50 minutes, or until a toothpick inserted into the center of the cake comes out clean. Let cool in pan for 10 minutes, then turn out onto a wire rack and cool completely.</li>
+           <li>To Make Frosting: In a medium bowl, combine butter, cream cheese, confectioners' sugar and 1 teaspoon vanilla. Beat until the mixture is smooth and creamy. Stir in chopped pecans. Frost the cooled cake.</li>
+       </ol>
     </body>
 </html>
