--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/carrot-cake.html">Carrot Cake III Recipe</a>
+        <ul>
+            <li><a href="recipes/carrot-cake.html">Carrot Cake III Recipe</a></li>
+            <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li></li>
+        </ul>
+       
     </body>
 </html>
