--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
-        
+
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8963973.jpg">
     </body>
 </html>
