--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="recipes/carrot-cake.html">Carrot Cake III Recipe</a></li>
             <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-            <li></li>
+            <li><a href="recipes/guacamole.html">Guacamole</a></li>
         </ul>
        
     </body>
