--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -26,6 +26,8 @@
             <li>1 pinch ground cayenne pepper (Optional)</li>
         </ul>
 
+        <h3>Steps</h3>
+
         <ol>
             <li>In a medium bowl, mash together the avocados, lime juice, and salt. Mix in onion, cilantro, tomatoes, and garlic. Stir in cayenne pepper. Refrigerate 1 hour for best flavor, or serve immediately.</li>
 
