--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Guacamole</h1>
         
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2015%2F08%2F4521556.jpg" width="450">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2015%2F08%2F4521556.jpg" width="450" alt="A chunky guacamole salad in a black stone bowl with tomatoes, onions, and cilantro">
 
         <h2>Description</h2>
 
