Edit lasagna html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,8 @@
     <body>
         <h1>World's Best Lasagna</h1>
 
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8963973.jpg" width="450" alt="Heavily layered lasagna sprinkled with parley as a garnish">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8963973.jpg" 
+        width="450" alt="Heavily layered lasagna sprinkled with parley as a garnish">
 
         <h2>Description</h2>
 
